<resources>
    <string name="app_name">BEGAWAN POLOSORO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="app_id">com.pt.begawanpolosoro</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="img_dir">Begawan Images</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_bukti_transaksi">UPLOAD GAMBAR</string>
    <string name="nama_pekerjaan">NAMA PEKERJAAN</string>
    <string name="nilai_pekerjaan">NILAI PEKERJAAN</string>
    <string name="tanggal_mulai">TANGGAL MULAI</string>
    <string name="tanggal_selesai">TANGGAL SELESAI</string>
    <string name="pilih_pekerjaan">Pilih Pekerjaan</string>
    <string name="pilih_karyawan">Pilih Karyawan</string>
    <string name="masukan_catatan">Masukan Catatan</string>
    <string name="masukan_nominal">Masukan Nominal</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pt_name">PT. BEGAWAN POLOSORO</string>
    <string name="label_nama">Nama</string>
    <string name="label_pekerjaan">Pekerjaan</string>
    <string name="label_catatan">Catatan</string>
    <string name="label_nominal">Nominal</string>
    <string name="label_tanggal">Tanggal</string>
    <string name="label_pengirim">Pengirim</string>
    <string name="label_tindakan">Tindakan</string>
    <string name="label_ganti_password">Ganti Password</string>
    <string name="label_masukan_username_baru">Masukan Username Baru</string>
    <string name="label_edit_username">Edit Username</string>
    <string name="kesalahan">Terjadi Kesalahan! Coba Lagi Nanti…</string>
    <string name="label_rest">Jika Anda melakukan reset maka semua data didalam server akan hilang. \n\nMasukan Kode verifikasi untuk melakukan reset</string>
    <string name="label_jenis_transaksi">Jenis Transaksi</string>
    <string name="belum_ada_pekerjaan">Belum Ada Pekerjaan</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="bukti_tx">BUKTI TRANSAKSI</string>
    <string name="label_dialog_utang">Semua hutang yang ada pada transaksi pengguna akan dilunasi dengan mengurangi saldo yang anda punyai.\nJumlah Semua Hutang:</string>
</resources>
