<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gaji.GajiDetailActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp">
        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/transparant"
            android:layout_gravity="left"
            android:src="@drawable/ic_back_black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="DETAIL GAJI"
            android:textColor="@color/darkBlue"
            android:fontFamily="@font/mont_bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="70dp"
            android:orientation="vertical">

            <include layout="@layout/content_uploadimage"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_nominal"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/worksans_bold"
                    android:textSize="18sp"/>

                <com.congfandi.lib.TextViewRupiah
                    android:id="@+id/gajiBaru"
                    android:backgroundTint="@color/light_gray"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/worksans_regular"
                    android:text="0"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkBlue"
                    android:text="@string/label_nama"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/karyawan"
                    android:backgroundTint="@color/light_gray"
                    android:layout_width="match_parent"
                    app:textTint="@color/darkBlue"
                    android:focusable="false"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/worksans_regular"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"

                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkBlue"
                    android:text="@string/label_pekerjaan"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/proyek"
                    android:backgroundTint="@color/light_gray"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    app:textTint="@color/darkBlue"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/worksans_regular"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"

                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkBlue"
                    android:text="@string/label_pengirim"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/pengirim"
                    android:backgroundTint="@color/light_gray"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    app:textTint="@color/darkBlue"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/worksans_regular"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"

                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkBlue"
                    android:text="@string/label_tanggal"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tgl"
                    android:backgroundTint="@color/light_gray"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    app:textTint="@color/darkBlue"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/worksans_regular"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"

                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/namaBaru"
                    android:text="@string/label_catatan"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/catatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_gray"
                    android:fontFamily="@font/worksans_regular"
                    android:focusable="false"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/darkBlue"
                    app:met_underlineColor="@color/lightBlue" />
            </LinearLayout>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>