<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteOri"
    tools:context=".gaji.GajiActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp">
        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/transparant"
            android:layout_gravity="left"
            android:src="@drawable/ic_back_black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="GAJI KARYAWAN"
            android:textColor="@color/darkBlue"
            android:fontFamily="@font/mont_bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <include layout="@layout/content_uploadimage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"

            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/darkBlue"
                android:text="@string/pilih_karyawan"
                android:fontFamily="@font/worksans_regular"
                android:textSize="18sp"/>
            <org.angmarch.views.NiceSpinner
                android:id="@+id/karyawan"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                app:textTint="@color/darkBlue"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/worksans_bold"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"

            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/darkBlue"
                android:text="@string/pilih_pekerjaan"
                android:fontFamily="@font/worksans_regular"
                android:textSize="18sp"/>
            <org.angmarch.views.NiceSpinner
                android:id="@+id/proyek"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                app:textTint="@color/darkBlue"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/worksans_bold"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"

            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/namaBaru"
                android:text="@string/masukan_catatan"
                android:textColor="@color/darkBlue"
                android:fontFamily="@font/worksans_regular"
                android:textSize="18sp"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/catatan"
                android:backgroundTint="@color/light_gray"
                app:met_floatingLabelText="catatan untuk karyawan"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/darkBlue"
                android:layout_width="match_parent"
                app:met_underlineColor="@color/lightBlue"
                android:focusedByDefault="false"
                android:hint="Masukan Catatan"
                android:layout_marginBottom="15dp"
                app:met_helperText="max. 50 karakter"
                app:met_helperTextColor="@color/black"
                android:maxLength="50"
                android:fontFamily="@font/worksans_regular"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masukan_nominal"
                android:textColor="@color/darkBlue"
                android:fontFamily="@font/worksans_regular"
                android:textSize="18sp"/>
            <com.congfandi.lib.EditTextRupiah
                android:id="@+id/gajiBaru"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                android:fontFamily="@font/worksans_regular"
                android:hint="Masukan Jumlah Gaji"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="250dp"
            android:gravity="center"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linierBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnBaru"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="KIRIM"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/whiteOri"
                    android:background="@drawable/gradient_btn"/>
                <Button
                    android:id="@+id/btnRiwayat"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="RIWAYAT"
                    android:gravity="center"
                    android:textColor="@color/whiteOri"
                    android:background="@drawable/gradient_btn"/>
            </LinearLayout>


            <ProgressBar
                android:id="@+id/progresBaru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KIRIM"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/whiteOri"/>

        </RelativeLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>