<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    android:background="@color/whiteOri"
    tools:context=".proyek.ProyekDetailActivity"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:background="@color/transparant"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_back_black"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="DETAIL PEKERJAAN"
                android:textColor="@color/darkBlue"
                android:fontFamily="@font/mont_bold"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="15sp"/>
            <ImageButton
                android:id="@+id/edit"
                android:layout_width="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_height="match_parent"
                android:background="@color/transparant"
                android:src="@drawable/ic_edit"/>
            <ImageButton
                android:id="@+id/editBatal"
                android:layout_width="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_height="match_parent"
                android:background="@color/transparant"
                android:src="@drawable/ic_cancel"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="70dp"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/namaBaru"
                    android:text="@string/nama_pekerjaan"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/namaProyek"
                    android:backgroundTint="@color/light_gray"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/darkBlue"
                    android:layout_width="match_parent"
                    app:met_underlineColor="@color/lightBlue"
                    android:focusableInTouchMode="false"
                    android:hint="Masukan Nama"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/worksans_regular"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nilai_pekerjaan"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <com.congfandi.lib.EditTextRupiah
                    android:id="@+id/modalProyek"
                    android:backgroundTint="@color/light_gray"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/worksans_regular"
                    android:hint="Masukan Nilai"
                    android:focusableInTouchMode="false"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_mulai"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <RelativeLayout
                    android:id="@+id/tglMulai"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <TextView
                        android:id="@+id/tglMulaiText"
                        android:backgroundTint="@color/light_gray"
                        android:layout_width="match_parent"
                        android:text="Tanggal Mulai "
                        android:textSize="18sp"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/worksans_regular"
                        android:layout_height="wrap_content"/>
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentEnd="true"
                        android:background="@color/transparant"
                        android:contentDescription="Tanggal Mulai" />
                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_selesai"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>
                <RelativeLayout
                    android:id="@+id/tglSelesai"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <TextView
                        android:id="@+id/tglSelesaiText"
                        android:backgroundTint="@color/light_gray"
                        android:layout_width="match_parent"
                        android:text="Tanggal Selesai "
                        android:textSize="18sp"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/worksans_regular"
                        android:layout_height="wrap_content"/>
                    <ImageButton
                        android:id="@+id/tglSelesaiIc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentEnd="true"
                        android:background="@color/transparant"
                        android:contentDescription="Tanggal Mulai" />
                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CATATAN PEKERJAAN"
                    android:textColor="@color/darkBlue"
                    android:fontFamily="@font/worksans_regular"
                    android:textSize="18sp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/keteranganProyek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/light_gray"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/worksans_regular"
                    android:hint="Masukan Catatan"

                    android:inputType="textMultiLine"
                    android:minLines="4"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="catatan"
                    app:met_floatingLabelTextColor="@color/darkBlue"
                    app:met_underlineColor="@color/lightBlue" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnBaru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KIRIM"
                    android:gravity="center"
                    android:textColor="@color/whiteOri"
                    android:background="@drawable/gradient_btn"/>
                <ProgressBar
                    android:id="@+id/progresBaru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KIRIM"
                    android:gravity="center"
                    android:textColor="@color/whiteOri"
                    android:background="@drawable/gradient_btn"/>

            </RelativeLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>